<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="330dp"
            android:layout_height="550dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:background="#A8A5A5"
                app:cardBackgroundColor="#EFEFEF"
                app:cardCornerRadius="25dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView_profile_fragment_avatar"
                        android:layout_width="74dp"
                        android:layout_height="88dp"
                        android:layout_marginTop="52dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.099"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_avatar_1" />

                    <TextView
                        android:id="@+id/textView_profile_fragment_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/app_profile_avatar"
                        android:textColor="#595959"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/imageView_profile_fragment_avatar"
                        app:layout_constraintEnd_toEndOf="@+id/imageView_profile_fragment_avatar"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/imageView_profile_fragment_avatar" />

                    <TextView
                        android:id="@+id/textView_profile_fragment_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name_input"
                        android:textColor="#4A4A4A"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/editText_profile_fragmente_name"
                        app:layout_constraintEnd_toEndOf="@+id/editText_profile_fragmente_name"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/editText_profile_fragmente_name" />

                    <EditText
                        android:id="@+id/editText_profile_fragmente_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.883"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView_profile_fragment_avatar" />

                    <TextView
                        android:id="@+id/textView_profile_fragment_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email_input"
                        android:textColor="#595959"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/editText_profile_fragment_email"
                        app:layout_constraintEnd_toEndOf="@+id/editText_profile_fragment_email"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/editText_profile_fragment_email" />

                    <EditText
                        android:id="@+id/editText_profile_fragment_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toStartOf="@+id/editText_profile_fragmente_name"
                        app:layout_constraintTop_toBottomOf="@+id/editText_profile_fragmente_name" />

                    <TextView
                        android:id="@+id/textView_profile_fragment_roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_profile_roll"
                        android:textColor="#595959"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/editText_profile_fragment_roll"
                        app:layout_constraintEnd_toEndOf="@+id/editText_profile_fragment_roll"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/editText_profile_fragment_roll" />

                    <EditText
                        android:id="@+id/editText_profile_fragment_roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="@+id/editText_profile_fragment_email"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/editText_profile_fragment_email"
                        app:layout_constraintTop_toBottomOf="@+id/editText_profile_fragment_email" />

                    <Button
                        android:id="@+id/button_profile_fragment_update"
                        android:layout_width="260dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="36dp"
                        android:background="@drawable/rounded_corner_purple"
                        android:drawableBottom="@drawable/rounded_corner_purple"
                        android:text="@string/app_profile_update"
                        android:textColor="#FFFFFF"
                        app:layout_constraintEnd_toEndOf="@+id/divider"
                        app:layout_constraintStart_toStartOf="@+id/divider"
                        app:layout_constraintTop_toBottomOf="@+id/editText_profile_fragment_roll" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="128dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_profile_fragment_update"
                        tools:background="#FFFFFF" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="115dp"
                        android:layout_height="77dp"
                        android:layout_marginStart="44dp"
                        android:layout_marginLeft="44dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/ic_logo" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/imageView" />

                    <ImageView
                        android:id="@+id/imageView_logout_profile_fragment"
                        android:layout_width="42dp"
                        android:layout_height="52dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.558"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:layout_constraintVertical_bias="0.28"
                        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
                        app:tint="@color/purple_500" />

                    <TextView
                        android:id="@+id/textView_username_label_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/app_profile_username"
                        android:textColor="#595959"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/editText_profile_fragment_roll"
                        app:layout_constraintEnd_toEndOf="@+id/imageView_profile_fragment_avatar"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/imageView_profile_fragment_avatar"
                        app:layout_constraintTop_toBottomOf="@+id/imageView_profile_fragment_avatar"
                        app:layout_constraintVertical_bias="0.062" />

                    <TextView
                        android:id="@+id/textView_username_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/editText_profile_fragment_roll"
                        app:layout_constraintEnd_toEndOf="@+id/textView_username_label_profile"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView_username_label_profile"
                        app:layout_constraintTop_toBottomOf="@+id/textView_username_label_profile"
                        app:layout_constraintVertical_bias="0.45999998" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Logout"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView_logout_profile_fragment"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/imageView_logout_profile_fragment"
                        app:layout_constraintTop_toBottomOf="@+id/imageView_logout_profile_fragment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="Profile"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>